--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,4 @@
 <figure class="image">
-  <img src="{{ include.url }}" alt="{{ include.description }}">
-  <figcaption>{{ include.description }}</figcaption>
+  <img src="{{ include.url }}" alt="{{ include.description }}" style="margin: auto;">
+  <figcaption style="text-align: center; color: gray;">{{ include.description }}</figcaption>
 </figure>
